# db-rust-test

./: .gitignore  README.md  rest-client.py
cli-db/: .env  Cargo.toml
cli-db/database/: database.db
cli-db/database/database_2/: about.txt  database.db
cli-db/migrations/2023-02-14-113440_create_tables/: up.sql
cli-db/src/: cli-app.rs  json-app.rs  main.rs  rest-api.rs  schema.rs  test.rs
cli-db/src/lib/: add_entries.rs  get_entries.rs  get_entries_g.rs  input_types.rs  json_data_structs.rs  lib.rs  models.rs  schema.rs
db-test/: .env  Cargo.toml
db-test/database/: database.db
db-test/migrations/2023-02-14-113440_create_tables/: up.sql
db-test/src/: lib.rs  models.rs  schema.rs
json-test/: Cargo.toml  README.MD
json-test/src/: main.rs
rest-api-test/: Cargo.toml
rest-api-test/src/: main.rs
