[package]
name = "cli-db"
version = "0.1.0"
edition = "2021"
authors = ["Edgar Torres <edgar.torres@rub.de>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
diesel = { version = "2.0.1", features = ["sqlite"] }
dotenvy = "0.15"

[lib]
name="lib"
path="src/lib/lib.rs"

[[bin]]
name="cli-app"
path="src/main.rs"
